--- a/src/lib/styles/_scheme.scss
+++ b/src/lib/styles/_scheme.scss
@@ -16,12 +16,12 @@ body {
 
 body[scheme="client_light"] {
     //? vkui variables
-    --bw_color_text: #000000;
-    --bw_color_text_lite: rgba(0, 0, 0, 0.8);
-    --card_color_bg: rgba(0, 0, 0, 0.1);
-    --header_tint: #ffbb00;
-    --accent: #ffbb00;
-    --tabbar_active_icon: #ffbb00;
+    --bw_color_text: #000000 !important;
+    --bw_color_text_lite: rgba(0, 0, 0, 0.8) !important;
+    --card_color_bg: rgba(0, 0, 0, 0.1) !important;
+    --header_tint: #ffbb00 !important;
+    --accent: #ffbb00 !important;
+    --tabbar_active_icon: #ffbb00 !important;
     --background_content: #ffffff !important;
     --modal_card_background: #ffffff !important;
     --header_background: #f7f7f8 !important;
@@ -35,7 +35,7 @@ body[scheme="client_light"] {
     --header_text: #2d2d2d !important;
     --text_primary: #2d2d2d !important;
     --header_text_secondary: #8f8f8f !important;
-    --overlay_status_icon: #8f8f8f !important;
+    --overlay_status_icon: #ffbb00 !important;
     --header_text_alternate: #2d2d2d !important;
     --separator_common: #f7f7f8 !important;
     --header_tint_alternate: #ffbb00 !important;
@@ -50,7 +50,7 @@ body[scheme="client_light"] {
 
 body[scheme="client_dark"],
 body[scheme="space_gray"] {
-    --bw_color_text: #ffffff;
-    --bw_color_text_lite: rgba(255, 255, 255, 0.8);
-    --card_color_bg: rgba(255, 255, 255, 0.1);
+    --bw_color_text: #ffffff !important;
+    --bw_color_text_lite: rgba(255, 255, 255, 0.8) !important;
+    --card_color_bg: rgba(255, 255, 255, 0.1) !important;
 }
